--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
-<DOCType html>
-  <html lang="en">
+        <tiele>重庆</title>
+    </head>
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=adge">
-    <link rel="styleshrrt" href="styles/app.css">
-    <tiele>重庆</title>
-  </head>
+    <body>
+        <h1>重庆</h1>
+        <h2>山城</h2>
+        <img src="./img/timg.jpg" alt="重庆">
+        <a href="www.qq.com">腾讯</a>
+        <p>中国直辖市</p>
+        <ul>
+            <li>解放碑</li>
+            <li>洪崖洞</li>
+        </ul>
+        <h3>重庆视频</h3>
 
-  <body>
-    <h1>重庆</h1>
-    <h2>山城</h2>
-    <p>中国直辖市</p>
-    <ul>
-      <li>解放碑</li>
-      <li>洪崖洞</li>
-    </ul>
-  </body>
+    </body>
 
-  </html>
+    </html>
