--- a/index.html
+++ b/index.html
@@ -1,49 +1,69 @@
-<!Doctype html>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<tiele>重庆</title>
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>重庆</title>
+  <head>
 
-<body>
-	<h1>重庆</h1>
-	<h2>山城</h2>
-	<img src="./img/timg.jpg" alt="重庆">
-	<a href="www.qq.com">腾讯</a>
-	<p>中国直辖市</p>
-	<ul>
-		<li>解放碑</li>
-		<li>洪崖洞</li>
-	</ul>
-	<table border="1" <colgroup>
-		<col style="background-colo:white" </col>
-		<col style="background-color:darkgoldenrod" </col>
-		<col style="background-color:blue" </col>
-		</colgroup>
-		<tbody>
-			<tr>
-				<th>周一</th>
-				<th>周二</th>
-				<th>周三</th>
-			</tr>
-			<tr>
-				<th>喝啤酒</th>
-				<td>看电视</td>
-				<td>打篮球</td>
-			</tr>
-			<tr>
-				<td>坐缆车</td>
-				<td>看夜景</td>
-				<th colspan="2">吃火锅打麻将</th>
-			</tr>
-			<tr>
-				<td>沙坪坝</td>
-				<td>观音桥</td>
-				<td>解放碑</td>
-			</tr>
-		</tbody>
-	</table>
+    <body>
+      <h1>重庆</h1>
+      <h2>山城</h2>
+      <img src="./img/timg.jpg" alt="重庆">
+      <a href="www.qq.com">腾讯</a>
+      <p>中国直辖市</p>
+      <ul>
+        <li>解放碑</li>
+        <li>洪崖洞</li>
+      </ul>
+      <h3>重庆三天旅程表</h3>
+      <table border="1" <colgroup>
+        <col style="background-colo:white" </col>
+        <col style="background-color:darkgoldenrod" </col>
+        <col style="background-color:blue" </col>
+        </colgroup>
+        <tbody>
+          <thead>
+            <tr>
+              <th>周一</th>
+              <th>周二</th>
+              <th>周三</th>
+            </tr>
+          </thead>
+          <tr>
+            <th>喝啤酒</th>
+            <td>看电视</td>
+            <td>打篮球</td>
+          </tr>
+          <tr>
+            <td>坐缆车</td>
+            <td>看夜景</td>
+            <th colspan="2">吃火锅打麻将</th>
+          </tr>
+          <tr>
+            <td>沙坪坝</td>
+            <td>观音桥</td>
+            <td>解放碑</td>
+          </tr>
+        </tbody>
+      </table>
 
-</body>
+      <h4>旅游报名表</h4>
+      <form action="/my-handling-form-page" method="post">
+        <div>
+          <label for="name">Name:</label>
+          <input type="text" id="mail" name="user-name">
+        </div>
+        <div>
+          <label for="mail">E-mail:</label>
+          <input type="email" id="mail" name="user-mail" </div>
+          <div>
+            <label for="msg">message:</label>
+            <textarea id="msg" name="user-message"></textarea>
+          </div>
+      </form>
+
+    </body>
 
 </html>
